Updates dragonfly processor to crop if image is larger than 232x232. Reincludes another grid-cell class for wide and medium breakpoints to ensure that layout is not cramped. Includes variables where appropriate.
*Extends grid cell classes to search

*Updates ratio to 1

*Updates the width of product summary media to adhere to image width contraints

*Includes retina process

HAVNTHEME-34

--- a/app/assets/stylesheets/workarea/storefront/components/_page_content.scss
+++ b/app/assets/stylesheets/workarea/storefront/components/_page_content.scss
@@ -7,7 +7,12 @@ $page-content-main-with-aside-width: 1128px !default;
 
 .page-content {
     position: relative;
+    padding: 0 ($spacing-unit / 2);
     z-index: index($page-container, page-content);
+
+    @include respond-to($medium-breakpoint) {
+        padding: 0;
+    }
 }
 
 .page-content__main--with-aside {
