--- a/app/assets/stylesheets/workarea/storefront/theme_config/color_schemes/_haven_color_scheme.scss
+++ b/app/assets/stylesheets/workarea/storefront/theme_config/color_schemes/_haven_color_scheme.scss
@@ -141,3 +141,4 @@ $focus-ring-color: $primary-color !default;
 
 // Browse page colors
 $category-count-color: $gray !default;
+$product-summary-border-color: $border-color !default;
